modificacions num_lectures

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 95,
    "id": "57c96d37-6fab-415c-84aa-e0ac001d936e",
    "metadata": {},
    "outputs": [],
@@ -3584,8 +3584,372 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "ba84146d-1e3f-498a-8797-1d44cc063b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_llibre</th>\n",
+       "      <th>titol</th>\n",
+       "      <th>nom</th>\n",
+       "      <th>escrit_per</th>\n",
+       "      <th>pertany_a</th>\n",
+       "      <th>adaptacio_a_pelicula</th>\n",
+       "      <th>any_publicacio</th>\n",
+       "      <th>edat_minima</th>\n",
+       "      <th>editorial</th>\n",
+       "      <th>format</th>\n",
+       "      <th>num_pagines</th>\n",
+       "      <th>best_seller</th>\n",
+       "      <th>saga</th>\n",
+       "      <th>traduccions</th>\n",
+       "      <th>valoracio</th>\n",
+       "      <th>num_lectures</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Norwegian Wood</td>\n",
+       "      <td>Norwegian_Wood</td>\n",
+       "      <td>Haruki_Murakami</td>\n",
+       "      <td>{'Ficcio'}</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Editorial Tusquets Editores</td>\n",
+       "      <td>{'blanda', 'dura', 'eBook'}</td>\n",
+       "      <td>400</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>No</td>\n",
+       "      <td>{'Frances', 'Castella', 'Alemany', 'Italia', '...</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bridget Jones's Diary</td>\n",
+       "      <td>Bridget_Joness_Diary</td>\n",
+       "      <td>Helen_Fielding</td>\n",
+       "      <td>{'Romance'}</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Editorial Picador</td>\n",
+       "      <td>{'blanda', 'dura', 'eBook'}</td>\n",
+       "      <td>464</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>{'Frances', 'Castella', 'Italia', 'Catala', 'A...</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Do Androids Dream of Electric Sheep?</td>\n",
+       "      <td>Do_Androids_Dream_of_Electric_Sheep</td>\n",
+       "      <td>Philip_K_Dick</td>\n",
+       "      <td>{'Ciencia_Ficcio'}</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Editorial Doubleday</td>\n",
+       "      <td>{'blanda'}</td>\n",
+       "      <td>208</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>No</td>\n",
+       "      <td>{'Alemany', 'Frances', 'Castella', 'Angles'}</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Harry Potter and the Philosopher's Stone</td>\n",
+       "      <td>Harry_Potter_and_the_Philosophers_Stone</td>\n",
+       "      <td>JK_Rowling</td>\n",
+       "      <td>{'Juvenil', 'Fantasia'}</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Editorial Bloomsbury Publishing PLC</td>\n",
+       "      <td>{'blanda', 'dura', 'eBook'}</td>\n",
+       "      <td>336</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>{'Frances', 'Castella', 'Alemany', 'Italia', '...</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Song of Achilles</td>\n",
+       "      <td>The_song_of_Achiles</td>\n",
+       "      <td>Madeline_Miller</td>\n",
+       "      <td>{'Romance', 'Ficcio', 'Historica'}</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Ecco Suma de Letras</td>\n",
+       "      <td>{'blanda', 'dura', 'eBook'}</td>\n",
+       "      <td>497</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>No</td>\n",
+       "      <td>{'Italia', 'Castella', 'Japones', 'Angles'}</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Los Ojos Amarillos de los Cocodrilos</td>\n",
+       "      <td>Los_Ojos_Amarillos_de_los_Cocodrilos</td>\n",
+       "      <td>Katherine_Pancol</td>\n",
+       "      <td>{'Romance', 'Ficcio'}</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>18</td>\n",
+       "      <td>B DE BOLSILLO</td>\n",
+       "      <td>{'blanda', 'dura', 'eBook'}</td>\n",
+       "      <td>552</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>{'Frances', 'Castella', 'Portugues', 'Catala',...</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>103</td>\n",
+       "      <td>Este dolor no es mío</td>\n",
+       "      <td>Este_dolor_no_es_mio</td>\n",
+       "      <td>Mark_Wolynn</td>\n",
+       "      <td>{'Creixement_personal'}</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>18</td>\n",
+       "      <td>GAIA</td>\n",
+       "      <td>{'blanda', 'dura', 'eBook'}</td>\n",
+       "      <td>288</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>No</td>\n",
+       "      <td>{'Alemany', 'Frances', 'Castella', 'Angles'}</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>104</td>\n",
+       "      <td>El expreso de Tokio</td>\n",
+       "      <td>El_expreso_de_Tokio</td>\n",
+       "      <td>Seicho_Matsumoto</td>\n",
+       "      <td>{'Ficcio', 'Policiaca'}</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>15</td>\n",
+       "      <td>ASTEROIDE</td>\n",
+       "      <td>{'blanda', 'dura', 'eBook'}</td>\n",
+       "      <td>220</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>{'Castella', 'Chec', 'Tailandes', 'Finlandes',...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>105</td>\n",
+       "      <td>El sabueso de los Baskerville</td>\n",
+       "      <td>El_Sabueso_de_los_Baskerville</td>\n",
+       "      <td>Arthur_Conan_Doyle</td>\n",
+       "      <td>{'Ficcio', 'Policiaca'}</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>1901</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Nórdica Libros</td>\n",
+       "      <td>{'blanda', 'dura', 'eBook'}</td>\n",
+       "      <td>int</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>{'Frances', 'Castella', 'Italia', 'Portugues',...</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>106</td>\n",
+       "      <td>Mort al Nil</td>\n",
+       "      <td>Mort_al_Nil</td>\n",
+       "      <td>Agatha_Christie</td>\n",
+       "      <td>{'Ficcio', 'Policiaca'}</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>1937</td>\n",
+       "      <td>0</td>\n",
+       "      <td>labutxaca</td>\n",
+       "      <td>{'al', 'Nil', 'Mort'}</td>\n",
+       "      <td>304</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>{'Castella', 'Chec', 'Tailandes', 'Rumanes', '...</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>107 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id_llibre                                     titol  \\\n",
+       "0            0                            Norwegian Wood   \n",
+       "1            1                     Bridget Jones's Diary   \n",
+       "2            2      Do Androids Dream of Electric Sheep?   \n",
+       "3            3  Harry Potter and the Philosopher's Stone   \n",
+       "4            4                          Song of Achilles   \n",
+       "..         ...                                       ...   \n",
+       "102        102      Los Ojos Amarillos de los Cocodrilos   \n",
+       "103        103                      Este dolor no es mío   \n",
+       "104        104                       El expreso de Tokio   \n",
+       "105        105             El sabueso de los Baskerville   \n",
+       "106        106                               Mort al Nil   \n",
+       "\n",
+       "                                         nom          escrit_per  \\\n",
+       "0                             Norwegian_Wood     Haruki_Murakami   \n",
+       "1                       Bridget_Joness_Diary      Helen_Fielding   \n",
+       "2        Do_Androids_Dream_of_Electric_Sheep       Philip_K_Dick   \n",
+       "3    Harry_Potter_and_the_Philosophers_Stone          JK_Rowling   \n",
+       "4                        The_song_of_Achiles     Madeline_Miller   \n",
+       "..                                       ...                 ...   \n",
+       "102     Los_Ojos_Amarillos_de_los_Cocodrilos    Katherine_Pancol   \n",
+       "103                     Este_dolor_no_es_mio         Mark_Wolynn   \n",
+       "104                      El_expreso_de_Tokio    Seicho_Matsumoto   \n",
+       "105            El_Sabueso_de_los_Baskerville  Arthur_Conan_Doyle   \n",
+       "106                              Mort_al_Nil     Agatha_Christie   \n",
+       "\n",
+       "                              pertany_a adaptacio_a_pelicula  any_publicacio  \\\n",
+       "0                            {'Ficcio'}                   Si            1987   \n",
+       "1                           {'Romance'}                   Si            1996   \n",
+       "2                    {'Ciencia_Ficcio'}                   No            1968   \n",
+       "3               {'Juvenil', 'Fantasia'}                   Si            2000   \n",
+       "4    {'Romance', 'Ficcio', 'Historica'}                   No            2012   \n",
+       "..                                  ...                  ...             ...   \n",
+       "102               {'Romance', 'Ficcio'}                   Si            2006   \n",
+       "103             {'Creixement_personal'}                   No            2016   \n",
+       "104             {'Ficcio', 'Policiaca'}                   No            1958   \n",
+       "105             {'Ficcio', 'Policiaca'}                   Si            1901   \n",
+       "106             {'Ficcio', 'Policiaca'}                   Si            1937   \n",
+       "\n",
+       "    edat_minima                            editorial  \\\n",
+       "0             3          Editorial Tusquets Editores   \n",
+       "1            13                    Editorial Picador   \n",
+       "2            13                  Editorial Doubleday   \n",
+       "3             9  Editorial Bloomsbury Publishing PLC   \n",
+       "4            13                  Ecco Suma de Letras   \n",
+       "..          ...                                  ...   \n",
+       "102          18                        B DE BOLSILLO   \n",
+       "103          18                                 GAIA   \n",
+       "104          15                            ASTEROIDE   \n",
+       "105          12                       Nórdica Libros   \n",
+       "106           0                            labutxaca   \n",
+       "\n",
+       "                          format num_pagines best_seller saga  \\\n",
+       "0    {'blanda', 'dura', 'eBook'}         400          Si   No   \n",
+       "1    {'blanda', 'dura', 'eBook'}         464          Si   Si   \n",
+       "2                     {'blanda'}         208          Si   No   \n",
+       "3    {'blanda', 'dura', 'eBook'}         336          Si   Si   \n",
+       "4    {'blanda', 'dura', 'eBook'}         497          Si   No   \n",
+       "..                           ...         ...         ...  ...   \n",
+       "102  {'blanda', 'dura', 'eBook'}         552          Si   Si   \n",
+       "103  {'blanda', 'dura', 'eBook'}         288          Si   No   \n",
+       "104  {'blanda', 'dura', 'eBook'}         220          No   No   \n",
+       "105  {'blanda', 'dura', 'eBook'}         int          Si   Si   \n",
+       "106        {'al', 'Nil', 'Mort'}         304          Si   Si   \n",
+       "\n",
+       "                                           traduccions  valoracio  \\\n",
+       "0    {'Frances', 'Castella', 'Alemany', 'Italia', '...        4.5   \n",
+       "1    {'Frances', 'Castella', 'Italia', 'Catala', 'A...        4.7   \n",
+       "2         {'Alemany', 'Frances', 'Castella', 'Angles'}        4.4   \n",
+       "3    {'Frances', 'Castella', 'Alemany', 'Italia', '...        4.7   \n",
+       "4          {'Italia', 'Castella', 'Japones', 'Angles'}        4.8   \n",
+       "..                                                 ...        ...   \n",
+       "102  {'Frances', 'Castella', 'Portugues', 'Catala',...        4.4   \n",
+       "103       {'Alemany', 'Frances', 'Castella', 'Angles'}        4.8   \n",
+       "104  {'Castella', 'Chec', 'Tailandes', 'Finlandes',...        4.0   \n",
+       "105  {'Frances', 'Castella', 'Italia', 'Portugues',...        4.3   \n",
+       "106  {'Castella', 'Chec', 'Tailandes', 'Rumanes', '...        4.2   \n",
+       "\n",
+       "     num_lectures  \n",
+       "0               1  \n",
+       "1               1  \n",
+       "2               0  \n",
+       "3               7  \n",
+       "4               2  \n",
+       "..            ...  \n",
+       "102             1  \n",
+       "103             1  \n",
+       "104             1  \n",
+       "105             1  \n",
+       "106             1  \n",
+       "\n",
+       "[107 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "books"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42889a0a-01cc-4e09-a571-9565d3efccf9",
    "metadata": {},
    "outputs": [],
    "source": []
